<resources>
    <string name="app_name">Petin</string>
    <string name="facebook_app_id">979547742953607</string>
    <string name="fb_login_protocol_scheme">fb979547742953607</string>
    <string name="facebook_client_token">977fe240ff6cd6f48de6e570d4f35aba</string>
    <string name="pets">Evcil Hayvanlarım</string>
    <string name="empty"></string>
    <string name="description">Hayvanseverlerin buluştuğu platform</string>
    <string name="mainPageTitle">Ana Sayfa</string>
    <string name="messagesTitle">Mesajlar</string>
    <string name="notificationTitle">Bildirimler</string>
    <string name="profileTitle">Profil</string>
    <string name="addPostTitle"> </string>
    <string name="guest">Misafir</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="forgotPassword">Parolamı Unuttum?</string>
    <string name="haveAccount">Zaten hesabınız var mı? Giriş yap.</string>
    <string name="checkAgreement">Kullanıcı sözleşmesini kabul etmeniz gerekmektedir..</string>
    <string name="dontHaveAccount">Hala kayıt olmadınız mı? Kayıt ol.</string>
    <string name="or">ya da</string>
    <string name="email">E-posta</string>
    <string name="your_email">E-posta adresiniz</string>
    <string name="password">Parola</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="phoneNumber">Telefon Numarası</string>
    <string name="nameLastname">Ad Soyad</string>
    <string name="next">İleri</string>
    <string name="agreementText"><u>Kullanıcı sözleşmesini kabul ediyorum.</u></string>
    <string name="enterEmail">Hesabınıza bağlı mail adresinizi giriniz.</string>
    <string name="findAccount">Hesabınızı Bulun</string>
    <string name="read">Okudum</string>
    <string name="choosePet">Evcil hayvanınızı seçiniz.</string>
    <string name="choosePetEditText">Neden evcil hayvanınızın partner olarak seçilmesini istediğinizi açıklayınız.</string>
    <string name="chooseAdoption">Neden bu evcil hayvanı sahiplenmek istediğinizi açıklayınız.</string>
    <string name="offer">Teklif</string>
    <string name="edit">Düzenle</string>
    <string name="allOffers">Teklifler</string>
    <string name="addPet">Evcil Hayvan Ekle</string>
    <string name="sendOffer">Teklifte Bulun</string>
    <string name="decline">Reddet</string>
    <string name="delete">Kaldır</string>
    <string name="deleteOffer">Teklifimi Kaldır</string>
    <string name="accept">Kabul Et</string>
    <string name="wrongLogin">Yanlış e-posta ya da parola</string>
    <string name="chooseType">Gönderi tipinizi seçiniz</string>
    <string name="post">Paylaşım</string>
    <string name="qna">Soru - Cevap</string>
    <string name="findPartner">Arkadaş Bulma</string>
    <string name="adoption">Sahiplendirme</string>
    <string name="comment">Yorum yazınız</string>
    <string name="comments">Yorumlar</string>
    <string name="message">Mesajlar</string>
    <string name="agreement">Sözleşme</string>
    <string name="newPost">Yeni Gönderi</string>
    <string name="publish">Paylaş</string>
    <string name="explanation">Açıklama yazınız</string>
    <string name="selectPet">Evcil hayvanınızı seçiniz</string>
    <string name="search">Ara</string>
    <string name="zero">0</string>
    <string name="today">Bugün</string>
    <string name="yesterday">Dün</string>
    <string name="takePhoto">Fotoğraf Çek</string>
    <string name="chooseGallery">Galeriden Seç</string>
    <string name="cancel">İptal</string>
    <string name="allPosts">Tüm Gönderiler</string>
    <string name="filter">Filtrele</string>
    <string name="reset">Temizle</string>
    <string name="location">Konum</string>
    <string name="type">Tür</string>
    <string name="breed">Irk</string>
    <string name="gender">Cinsiyet</string>
    <string name="age">Yaş</string>
    <string name="chooseLocation">Konum Seçiniz</string>
    <string name="addPhoto">Fotoğraf Ekleyiniz</string>
    <string name="changePhoto">Fotoğrafınzı Değiştiriniz</string>
    <string name="apply">Uygula</string>
    <string name="save">Kaydet</string>
    <string name="deletePost">Sil</string>
    <string name="usernameNeeded">Hesabınızın güvenliği için kullanıcı adınızı belirleyiniz.</string>
    <string name="welcomeBack">Başarıyla giriş yaptınız.</string>
    <string name="settings_title">Ayarlar</string>
    <string name="myOffers">Tekliflerim</string>
    <string name="myOffer">Teklifim</string>
    <string name="settings_account">Hesap</string>
    <string name="settings_privacy_and_settings">Gizlilik ve Güvenlik</string>
    <string name="settings_about">Hakkımızda</string>
    <string name="settings_log_out">Çıkış Yap</string>
    <string name="settings_my_account">Hesabım</string>
    <string name="settings_personal_information">Kişisel Bilgilerim</string>
    <string name="settings_my_favorites">Beğenilerim</string>
    <string name="settings_change_password">Parolamı Değiştir</string>
    <string name="settings_delete_account">Hesabımı Sil</string>
    <string name="settings_change_profile_photo">Profil Fotoğrafını Değiştir</string>
    <string name="settings_privacy_and_security">Gizlilik ve Güvenlik</string>
    <string name="settings_blocked_accounts">Engellenen Hesaplar</string>
    <string name="settings_blocked_accounts_unblock">ENGELLEMEYİ KALDIR</string>
    <string name="settings_what_is_pet">Petin nedir?</string>
    <string name="settings_who_we_are">Biz kimiz?</string>
    <string name="settings_our_purpose">Amacımız</string>
    <string name="settings_wrong_number">Eksik telefon numarası girdiniz!</string>
    <string name="settings_bout">Hakkımızda</string>
    <string name="settings_delete_account_info">Hesabınız kalıcı olarak silinecektir.</string>
    <string name="settings_current_password">Mevcut Parola</string>
    <string name="settings_new_password">Yeni Parola</string>
    <string name="settings_new_password_again">Yeni Parola (Yeniden)</string>
    <string name="settings_new_password_info">Parolanızın bir büyük, bir küçük ve bir rakam içermesi ve en az 8 harf olması lazım</string>
    <string name="feed">Gönderiler</string>
    <string name="follower">Takipçiler</string>
    <string name="followed">Takip edilenler</string>
    <string name="block_message">Bu kullanıcı tarafından engellendiniz</string>
    <string name="accept_offer">Teklifi kabul ettiniz.</string>
    <string name="decline_offer">Teklifi reddettiniz.</string>
    <string name="delete_offer">Teklifinizi sildiniz.</string>
    <string name="error_accept_offer">Teklifi kabul ederken bir sorun oluştu</string>
    <string name="error_decline_offer">Teklifi reddederken bir sorun oluştu</string>
    <string name="error_pet_delete">Evcil hayvanınızın profili silinirken bir sorun oluştu</string>
    <string name="error_comment_delete">Yorumunuz silinirken bir sorun oluştu</string>
    <string name="add_pet_required">Lütfen gerekli yerleri girdiğinize ve fotoğraf eklediğinize emin olun.</string>
    <string name="pet_delete">Evcil hayvanınızın profili başarıyla sildiniz</string>
    <string name="comment_delete">Yorumunuz başarıyla silindi</string>
    <string name="add_text">Açıklama eklemeden paylaşımda bulanamazsınız.</string>
    <string name="no_user">Kullanıcı bulunamamıştır.</string>
    <string name="choose_pet">Evcil hayvan seçmeden paylaşımda bulanamazsınız.</string>
    <string name="please_add_pet">Kayıtlı evcil hayvan bulunamamaktadır. Lütfen profil sayfasından ekleme yapınız.</string>
    <string name="add_pet">Evcil hayvanınızın profili başarıyla kaydedildi</string>
    <string name="edit_pet">Evcil hayvanınızın profili başarıyla güncellendi</string>
    <string name="error_add_pet">Evcil hayvanınızın profili kaydedilemedi.</string>
    <string name="have_to_add_pet">Evcil hayvanınızı seçmeniz gerekli.</string>
    <string name="write_a_message">Mesajınızı yazınız</string>
    <string name="new_message">Yeni Mesaj</string>
    <string name="offer_sent">Teklifiniz Gönderildi</string>
    <string name="success_new_password">Parolanız başarıyla değiştirildi.</string>
    <string name="error_new_password">Parolanız oluşurken bir sorun oluştu.</string>
    <string name="error_wrong_email">Sisteme kayıtlı böyle bir mail adresi bulunamamıştır.</string>
    <string name="success_profile_change">Kişisel bilgileriniz başarıyla güncellenmiştir.</string>
    <string name="error_profile_change">Ad Soyad alanının boş olmadığına ve telefon numarasını tam girdiğinize emin olun.</string>
    <string name="error_report">Şikayetiniz gönderilememiştir.</string>
    <string name="success_report">Şikayetiniz başarıyla gönderilmiştir.</string>
    <string name="error_password_code">Yanlış kod girdiniz</string>
    <string name="connection_lost">İnternet bağlantınızı kontrol ediniz.</string>
    <string name="error_wrong_type_password">Mevcut şifrenizin doğru girdiğinizden ve kurala uygun yeni şifre girdiğinizden emin olunuz.</string>
    <string name="ok">Tamam</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="connection_failure">İnternet Erişimi Yok</string>
    <string name="reconnect">Tekrar bağlan</string>
    <string name="connection_failure_description">Lütfen internetinizi açıp uygulamayı kullanınız!</string>
    <string name="member_check"><u>Üye iseniz giriş yapmak için tıklayın</u></string>
    <string name="loginNeeded">Petin\'i kullanmak için kayıt olun</string>
    <string name="user_block">Kullanıcıyı engellemek istediğinize emin misiniz?</string>
    <string name="user_unblock">Kullanıcının engelini kaldırmak istediğinize emin misiniz?</string>
    <string name="warning">Uyarı</string>
    <string name="no_internet">Lütfen internet bağlantınızı kontrol ediniz.</string>
    <string name="logoutSure">Çıkış yapmak istediğinize emin misiniz?</string>
    <string name="deleteOfferSure">Teklifinizi silmek istediğinize emin misiniz?</string>
    <string name="ask_sure">Emin misiniz?</string>
    <string name="delete_user_warning">Hesabınız kalıcı olarak silenecektir emin misin?</string>
    <string name="delete_pet_warning">Evcil hayvanınızı silmek istediğinize emin misin?</string>
    <string name="delete_post_warning">Gönderinizi silmek istediğinize emin misin?</string>
    <string name="submit_report_warning">Gönderiyi şikayet etmek istediğinize emin misin?</string>
    <string name="submit_user_report_warning">Kullanıcıyı şikayet etmek istediğinize emin misiniz?</string>
    <string name="delete_comment_warning">Yorumu silmek istediğinize emin misin?</string>
    <string name="postSure">Paylaşım yapmak istemediğinize emin misin?</string>
    <string name="follow_user">Takip et</string>
    <string name="unfollow_user">Takipten çıkar</string>
    <string name="block_user">Engelle</string>
    <string name="unblock_user">Engeli kaldır</string>
    <string name="name">İsim</string>
    <string name="timeUp">Süreniz dolmuştur</string>
    <string name="didNotReceiveEmail">Mail size ulaşmadı mı?</string>
    <string name="otpDescription">Mailinize gönderilen 6 haneli doğrulama kodunu girin.</string>
    <string name="otpEnter">Doğrulama Kodunu Girin</string>
    <string name="newPassword">Yeni Parolanızı Giriniz</string>
    <string name="secondsLeft">saniye kaldı</string>
    <string name="user_report">Kullanıcıyı şikayet etme sebebinizi seçiniz.</string>
    <string name="inappropriate_user">Kullanıcı uygunsuz içerik paylaşımı yapıyor.</string>
    <string name="identity_theft_user">Kullanıcı başka biri gibi davranıyor.</string>
    <string name="underage_user">13 yaş ve altı bir kullanıcı.</string>
    <string name="inappropriate">Uygunsuz içerik</string>
    <string name="spam">Spam</string>
    <string name="fraud">Sahtekarlık veya Dolandırıcılık</string>
    <string name="nudityOrSexuality">Çıplaklık veya Cinsellik</string>
    <string name="other">Diğer</string>
    <string name="report">Şikayet Et</string>
</resources>