<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_bottom_sheet"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:padding="@dimen/scale_16dp">

        <TextView
            android:id="@+id/reportText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/scale_10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/user_report"
            android:textColor="@color/darkPrimary"
            android:textSize="@dimen/scale_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/inappropriate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/scale_20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/inappropriate_user"
            android:textColor="@color/darkPrimary"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reportText" />

        <TextView
            android:id="@+id/identityTheft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/scale_20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/identity_theft_user"
            android:textColor="@color/darkPrimary"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inappropriate" />

        <TextView
            android:id="@+id/underageUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/scale_20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/underage_user"
            android:textColor="@color/darkPrimary"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/identityTheft" />

        <TextView
            android:id="@+id/spamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/scale_20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/spam"
            android:textColor="@color/darkPrimary"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/underageUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>