<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bottom_sheet"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filterTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_blue"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/closeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/scale_16dp"
                android:src="@drawable/ic_bold_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/filter"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/scale_17dp"
                app:layout_constraintEnd_toStartOf="@id/reset"
                app:layout_constraintStart_toEndOf="@id/closeIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/scale_16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="@dimen/scale_15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/filterTop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/allPostText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/scale_16dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/allPosts"
                    android:textColor="@color/darkPrimary"
                    android:textSize="@dimen/scale_15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/scale_16dp"
                    android:layout_marginEnd="@dimen/scale_16dp"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/postText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/scale_16dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/post"
                    android:textColor="@color/darkPrimary"
                    android:textSize="@dimen/scale_15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/scale_16dp"
                    android:layout_marginEnd="@dimen/scale_16dp"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/qnaText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/scale_16dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/qna"
                    android:textColor="@color/darkPrimary"
                    android:textSize="@dimen/scale_15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/scale_16dp"
                    android:layout_marginEnd="@dimen/scale_16dp"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/findPartnerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/scale_16dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/findPartner"
                    android:textColor="@color/darkPrimary"
                    android:textSize="@dimen/scale_15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/scale_16dp"
                    android:layout_marginEnd="@dimen/scale_16dp"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/adoptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/scale_16dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/adoption"
                    android:textColor="@color/darkPrimary"
                    android:textSize="@dimen/scale_15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/scale_16dp"
                    android:layout_marginEnd="@dimen/scale_16dp"
                    android:background="@color/divider" />

                <com.google.android.material.button.MaterialButton
                    style="@style/PetButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/scale_16dp"
                    android:layout_marginVertical="30dp"
                    android:text="@string/apply" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>